# HarnessDesigner

./: .gitignore  .gitmodules  CODEBASE_MAP.md  EDITOR_3D_SUBMODULE_INTEGRATION.md  INTEGRATION_SUMMARY.md  README.md  REMAINING_INTEGRATION.md  TESTING_GUIDE.md  TODO.md  build.py  installer.py  pyproject.toml  pyproject.toml.bak  requirements.txt  run.py  run2.py  setup.py
.claude/: settings.json
.github/workflows/: macos.yml  python-package.yml  unix.yml  windows.yml
aptiv/: aptiv.py  collect_data.py  fix_colors.py
aptiv/temp_data/: some_other_locks.json
aptiv_output/: accessories.json  covers.json  cpa_locks.json  fix_colors.py  seals.json  terminals.json  tpa_locks.json
bosch/: product_specs.py  scraper.py
builder/: __init__.py  __main__.py  _backend.py  build.py  build_ext.py  build_native_deps.py  build_pyx.py  collect_modules.py  collect_stdlib.py  compile_harness_designer.py  compile_wxpython.py  compiler.py  cython_build.py  installer.py  msvc_env.py  prepare_installer_assets.py  run.py  spawn.py  utils.py  utils_.py  version_info.txt  wheel_build.py
builder/extension/: extension_base.py
builder/pyinstaller_hooks/: hook-keyring.py
builder/scripts/: bootstrap.py  dep_installer.py  installer.py  rthook_pip_distlib.py  run.py
harness_designer/: __init__.py  __version__.py  app.py  color.py  config.py  critical_error_dialog.py  debug.py  gl_materials.py  model_data.py  monkey_patch.py  resources.py  splash.py  utils.py
harness_designer.backup/: __init__.py  utils.py
harness_designer.backup/cavity_map_editor/: README.md  __init__.py  brush.py  cavity.py  circle.py  crop.py  dxf.py  editor.py  eraser.py  line.py  pan.py  pencil.py  pointer.py  rect.py
harness_designer.backup/concentric_twisting/: __init__.py  layer.py
harness_designer.backup/dialogs/: add_3d_object.py  remove_db_record.py
harness_designer.backup/editor_3d/: __init__.py
harness_designer.backup/geometry/: angle.py  box.py  line.py  point.py  rect.py
harness_designer.backup/menus/: __init__.py  menubar.py
harness_designer.backup/objects/: __init__.py  cover.py  cpa_lock.py  housing.py  project.py  transition.py  wire_layout.py  wire_service_loop.py
harness_designer.backup/shapes/: cone.py  cylinder.py
harness_designer.backup/ui/: mainframe.py  project_explorer.py
harness_designer/attributes/: boot.py  (+22 more)
new_harness_designer/: __init__.py  config.py  debug.py
scratches/: 12191818_3D_STP.stp  15326864_3D_STP.stp  15326868_3D_STP.stp  15366021_3D_STP.stp  2d_ polygon_3d.py  build123d_hemisphere_test.py  build123d_test.py  curved_arrow.py  detecting_rects_circles.py  frame_for_scratches.py  gl_lightng_test.py  hemisphere_build123d.stl  housing_cavity_orientation.py  messing_with_open_gl.py  mobius.stl  more_open_gl_tests.py  next_git_ai_query.txt  opengl_framework_for_scratches.py  opengl_test.py  part_selector.py  pick_color_id.py  pick_full_pipeline.py  proper_working_angles.py  scaling_stl1.py  scaling_stl2.py  scratch_1769.py  self_generated_objects.py  service_loop_test.py  test_step.step  test_stl.stl  wire_connection_to_stl_mapper.py  working_on_2d_editor.py
staged for later removal/: wxartist_event.py  wxkey_event.py  wxmouse_event.py
te/: accessories.py  boots.py  bundles.py  covers.py  housings.py  locks.py  map_json.py  seals.py  splices.py  te_step1.py  te_step2.py  terminals.py  terminals_splices.py  transitions.py  wires.py
(+1083 files in other folders)
