[build-system]
requires = [
    "setuptools==62.0.0",
    "Cython==3.2.4",
    "wheel==0.46.3",
    "pyinstaller==6.19.0",
    "pyMSVC@git+https://github.com/kdschlosser/python_msvc ; sys_platform=='win32'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules=[]

[project]
name = "harness_designer"
version = "0.0.1"
description = "Wiring harness design software."
readme = "README.md"
requires-python = "==3.11.14"
keywords = []
authors = [{ name = "Kevin G. Schlosser" }]
maintainers = [{ name = "Kevin G. Schlosser" }]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/HarnessDesigner/HarnessDesigner"
"Bug Reports" = "https://github.com/HarnessDesigner/HarnessDesigner/issues"
"Source" = "https://github.com/HarnessDesigner/HarnessDesigner"
